objects/Related_DQL_s__c.object
<CustomObject>
    <fields>
        <fullName>Original_Data_Qualified_Lead__c</fullName>
        <label>Original Data Qualified Lead</label>
        <referenceTo>Data_Qualified_Lead__c</referenceTo>
        <relationshipLabel>Related DQL&apos;s</relationshipLabel>
        <relationshipName>Related_DQL_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_DQL_Status__c</fullName>
        <formula>TEXT( Related_Data_Qualified_Lead__r.DQL_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related DQL Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Data_Qualified_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Data Qualified Lead</label>
        <referenceTo>Data_Qualified_Lead__c</referenceTo>
        <relationshipLabel>Related DQL&apos;s (Related Data Qualified Lead)</relationshipLabel>
        <relationshipName>Related_DQL_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related DQL</label>
    <nameField>
        <displayFormat>Related DQLs Name - {000000}</displayFormat>
        <label>Related DQLs Auto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related DQL&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>